objects/Product2/fields/Ruby__BillingPeriod__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BillingPeriod__c</fullName>
    <description>Determines how often the product will be billed. If not selected, the billing period will default to to the Billing Period value set at the system level, or account level.</description>
    <inlineHelpText>Determines how often the product will be billed. If not selected, the billing period will default to to the Billing Period value set at the system level, or account level.</inlineHelpText>
    <label>Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__BillingPeriods</valueSetName>
    </valueSet>
</CustomField>