objects/Product2/fields/Ruby__BundleTemplate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__BundleTemplate__c</fullName>
    <label>Bundle Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced</fullName>
                <default>true</default>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>DynamicOptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>