objects/Product2/fields/Ruby__CarvesEligible__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CarvesEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this product can undergo revenue carves.</description>
    <inlineHelpText>Indicates if this product can undergo revenue carves.</inlineHelpText>
    <label>Carves Eligible</label>
    <type>Checkbox</type>
</CustomField>