objects/Product2/fields/Ruby__CarvesLiabilitySegment__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CarvesLiabilitySegment__c</fullName>
    <description>Carves Liability Segment for revenue recognition</description>
    <label>Carves Liability Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>