objects/Product2/fields/Ruby__CarvesRevenueSegment__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CarvesRevenueSegment__c</fullName>
    <description>Carves Revenue Segment for revenue recognition</description>
    <label>Carves Revenue Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>