objects/Product2/fields/Ruby__Configurable__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Configurable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this product is a bundle product.</description>
    <inlineHelpText>Indicates if this product is a bundle product.</inlineHelpText>
    <label>Is Bundle Product</label>
    <type>Checkbox</type>
</CustomField>