objects/Product2/fields/Ruby__CreditConversionExternalId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CreditConversionExternalId__c</fullName>
    <label>CreditConversionExternalID(Deprecated)</label>
    <length>36</length>
    <type>Text</type>
</CustomField>