objects/Product2/fields/Ruby__CreditConversionId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__CreditConversionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credit Conversion ID</label>
    <referenceTo>Ruby__CreditConversion__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>