objects/Product2/fields/Ruby__DefaultRenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DefaultRenewalTerm__c</fullName>
    <label>Default Renewal Term</label>
    <precision>16</precision>
    <scale>11</scale>
    <type>Number</type>
</CustomField>