objects/Product2/fields/Ruby__DefaultUom__c.field-meta.xml
<CustomField>
    <fullName>Ruby__DefaultUom__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default UOM</label>
    <referenceTo>Ruby__UOM__c</referenceTo>
    <relationshipLabel>products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>