objects/Product2/fields/Ruby__EnableCommittedPeriod__c.field-meta.xml
<CustomField>
    <fullName>Ruby__EnableCommittedPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, this product will automatically generate ramp line items in the quote - one for each Committed Period based on the subscription term and the product&apos;s unit-of-measure (UOM) term dimension. For example, a 12-month subscription with a quarterly term dimension will generate four ramped Committed Periods.</description>
    <inlineHelpText>When enabled, this product will automatically generate ramp line items in the quote - one for each Committed Period based on the subscription term and the product&apos;s unit-of-measure (UOM) term dimension. For example, a 12-month subscription with a quarterly term dimension will generate four ramped Committed Periods.</inlineHelpText>
    <label>Enable Committed Period Ramping</label>
    <type>Checkbox</type>
</CustomField>