objects/Product2/fields/Ruby__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>