objects/Product2/fields/Ruby__Evergreen__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Evergreen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this product is evergreen.</description>
    <inlineHelpText>Indicates if this product is evergreen.</inlineHelpText>
    <label>Evergreen</label>
    <type>Checkbox</type>
</CustomField>