objects/Product2/fields/Ruby__FreeTrialType__c.field-meta.xml
<CustomField>
    <fullName>Ruby__FreeTrialType__c</fullName>
    <label>Free Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__FreeTrialType</valueSetName>
    </valueSet>
</CustomField>