objects/Product2/fields/Ruby__FreeTrialUnit__c.field-meta.xml
<CustomField>
    <fullName>Ruby__FreeTrialUnit__c</fullName>
    <label>Free Trial Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>