objects/Product2/fields/Ruby__ImagePath__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ImagePath__c</fullName>
    <description>image path saved in s3</description>
    <label>Image Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>