objects/Product2/fields/Ruby__ImageSignedUrl__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ImageSignedUrl__c</fullName>
    <description>image url</description>
    <label>Image Url</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>