objects/Product2/fields/Ruby__LastPublishedBy__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LastPublishedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last published by for Self Service</description>
    <label>Last Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>