objects/Product2/fields/Ruby__LastPublishedDate__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LastPublishedDate__c</fullName>
    <description>Last published date for Self Service</description>
    <label>Last Published Date</label>
    <type>Date</type>
</CustomField>