objects/Product2/fields/Ruby__LongDescription__c.field-meta.xml
<CustomField>
    <fullName>Ruby__LongDescription__c</fullName>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>