objects/Product2/fields/Ruby__OriginalProduct__c.field-meta.xml
<CustomField>
    <fullName>Ruby__OriginalProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original product that the product is copied from, only for multi attributes record type products.</description>
    <label>Original Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Original Product)</relationshipLabel>
    <relationshipName>multiAttributesProducts</relationshipName>
    <type>Lookup</type>
</CustomField>