objects/Product2/fields/Ruby__PriceEstimatorsConfig__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PriceEstimatorsConfig__c</fullName>
    <description>configuration of bundle price estimators</description>
    <label>PriceEstimatorsConfig</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>