objects/Product2/fields/Ruby__PriceModel__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PriceModel__c</fullName>
    <description>The revenue model of the product.</description>
    <inlineHelpText>The revenue model of the product.</inlineHelpText>
    <label>Revenue Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__PriceModel</valueSetName>
    </valueSet>
</CustomField>