objects/Product2/fields/Ruby__ProductRecordType__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ProductRecordType__c</fullName>
    <label>Nue Product Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__ProductRecordType</valueSetName>
    </valueSet>
</CustomField>