objects/Product2/fields/Ruby__PublishStatus__c.field-meta.xml
<CustomField>
    <fullName>Ruby__PublishStatus__c</fullName>
    <description>Publish status for Self Service</description>
    <label>Publish Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__PublishStatus</valueSetName>
    </valueSet>
</CustomField>