objects/Product2/fields/Ruby__ReferenceProduct__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ReferenceProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>product that will be inherited by current product</description>
    <label>Reference Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Referencing Products</relationshipLabel>
    <relationshipName>referencingProducts</relationshipName>
    <type>Lookup</type>
</CustomField>