objects/Product2/fields/Ruby__RevenueRuleExternalId__c.field-meta.xml
<CustomField>
    <fullName>Ruby__RevenueRuleExternalId__c</fullName>
    <label>Revenue Rule External Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>