objects/Product2/fields/Ruby__RolloverUnusedCredits__c.field-meta.xml
<CustomField>
    <fullName>Ruby__RolloverUnusedCredits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the remaining credit balance in the current credit period will be rolled over to the next credit period.</description>
    <inlineHelpText>When enabled, the remaining credit balance in the current credit period will be rolled over to the next credit period.</inlineHelpText>
    <label>Rollover Unused Credits</label>
    <type>Checkbox</type>
</CustomField>