objects/Product2/fields/Ruby__ShowIncludedProductOptions__c.field-meta.xml
<CustomField>
    <fullName>Ruby__ShowIncludedProductOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Included Product Options</label>
    <type>Checkbox</type>
</CustomField>