objects/Product2/fields/Ruby__SoldIndependently__c.field-meta.xml
<CustomField>
    <fullName>Ruby__SoldIndependently__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this product can be sold independently</description>
    <label>Sold Independently</label>
    <type>Checkbox</type>
</CustomField>