objects/Product2/fields/Ruby__Status__c.field-meta.xml
<CustomField>
    <fullName>Ruby__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ruby__ProductStatus</valueSetName>
    </valueSet>
</CustomField>