objects/Product2/fields/Ruby__TaxCategory__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxCategory__c</fullName>
    <description>The VAT category code of the product.</description>
    <inlineHelpText>The VAT category code of the product.</inlineHelpText>
    <label>Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
                <label>Vat Reverse Charge</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Canary Islands general indirect tax</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Tax for production, services and importation in Ceuta and Melilla</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Exempt from Tax</label>
            </value>
            <value>
                <fullName>S</fullName>
                <default>true</default>
                <label>Standard rate</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Zero rated goods</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Free export item, VAT not charged</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>VAT exempt for EEA intra-community supply of goods and services</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Transferred VAT</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Service outside scope of tax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>