objects/Product2/fields/Ruby__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxCode__c</fullName>
    <description>Tax code for the product.</description>
    <inlineHelpText>Tax Code used for the product.</inlineHelpText>
    <label>Tax Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>