objects/Product2/fields/Ruby__TaxMode__c.field-meta.xml
<CustomField>
    <fullName>Ruby__TaxMode__c</fullName>
    <description>Indicates if the tax is inclusive or exclusive. Inclusive mode combines taxes into the base price, while exclusive mode adds taxes separately.</description>
    <inlineHelpText>Indicates if the tax is inclusive or exclusive. Inclusive mode combines taxes into the base price, while exclusive mode adds taxes separately.</inlineHelpText>
    <label>Tax Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TaxExclusive</fullName>
                <label>Tax Exclusive</label>
            </value>
            <value>
                <fullName>TaxInclusive</fullName>
                <label>Tax Inclusive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>