objects/Product2/fields/SBQQ__AllocatePotOnOrders__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AllocatePotOnOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ordered, this indicates whether the product should calculate its unit and total price based on the targets.</description>
    <inlineHelpText>Select to base its calculations within an order on the targets.</inlineHelpText>
    <label>Allocate POT on Orders</label>
    <type>Checkbox</type>
</CustomField>