objects/Product2/fields/Server_Deployment_Required__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Server Deployment Required</description>
    <label>Server Deployment Required</label>
    <type>Checkbox</type>
</CustomField>