objects/Product2/fields/TANCOREP__c.field-meta.xml
<CustomField>
    <fullName>TANCOREP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for the purpose of CPQ twin field on Quote line for roll up summary.</description>
    <inlineHelpText>Checked if product code = TAN-CORE-P</inlineHelpText>
    <label>TAN-CORE-P</label>
    <type>Checkbox</type>
</CustomField>