objects/Product2/fields/Tanium_Infrastructure_Form_Needed__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Infrastructure_Form_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a Tanium Infrastructure Form is required for this product. Ref INC0455542.</description>
    <label>Tanium Infrastructure Form Needed</label>
    <type>Checkbox</type>
</CustomField>