objects/Product2/fields/Term_months__c.field-meta.xml
<CustomField>
    <fullName>Term_months__c</fullName>
    <label>Term (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>