objects/Product2/fields/TRAC_IncludeInARV__c.field-meta.xml
<CustomField>
    <fullName>TRAC_IncludeInARV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if the product should be included in the ARV calculation

06/29.2023 - Changed the label. ARV is a deprecated financial model</description>
    <label>DEPRECATED - Include in ARV</label>
    <type>Checkbox</type>
</CustomField>