objects/Product2/fields/TrainingDeliveryType__c.field-meta.xml
<CustomField>
    <fullName>TrainingDeliveryType__c</fullName>
    <description>Twin field created for E-Commerce Training functionality</description>
    <label>Training Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instructor-Led Training (ILT)</fullName>
            </value>
            <value>
                <fullName>Virtual Instructor-Led Training (vILT)</fullName>
            </value>
            <value>
                <fullName>Web-Based Training (WBT)</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>