objects/Product2/fields/UI_Group__c.field-meta.xml
<CustomField>
    <fullName>UI_Group__c</fullName>
    <description>ONLY USED FOR UI SORT ORDER PURPOSES. SHOULD NOT BE INCLUDED IN ANY AUTOMATION OR INTEGRATION. SS-4691</description>
    <inlineHelpText>ONLY USED FOR UI SORT ORDER PURPOSES. SHOULD NOT BE INCLUDED IN ANY AUTOMATION OR INTEGRATION</inlineHelpText>
    <label>UI Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Conversion to Tanium Cloud</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Legacy - Perpetual</fullName>
            </value>
            <value>
                <fullName>Deprecated - Do not use</fullName>
            </value>
            <value>
                <fullName>On-Prem - Core &amp; Modules (A La Carte)</fullName>
            </value>
            <value>
                <fullName>On-Prem - Bundles &amp; Solutions</fullName>
            </value>
            <value>
                <fullName>Third-Party Products &amp; Partnerships</fullName>
            </value>
            <value>
                <fullName>Tanium Services &amp; Support</fullName>
            </value>
            <value>
                <fullName>Tanium Cloud for US Government</fullName>
            </value>
            <value>
                <fullName>Tanium Cloud - Core &amp; Modules (A La Carte)</fullName>
            </value>
            <value>
                <fullName>Tanium Cloud - Bundles &amp; Solutions</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Tanium Endpoint Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>