objects/Product2/fields/X18D_ID__c.field-meta.xml
<CustomField>
    <fullName>X18D_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18D ID</label>
    <type>Text</type>
</CustomField>