objects/Product2/fields/Year_Designation__c.field-meta.xml
<CustomField>
    <fullName>Year_Designation__c</fullName>
    <label>Year Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Year1, Year2, Year3, Year4, Year5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>