objects/Product2/recordTypes/Ruby__Bundle.recordType-meta.xml
<RecordType>
    <fullName>Ruby__Bundle</fullName>
    <active>true</active>
    <label>Bundle</label>
</RecordType>