objects/Product2/recordTypes/Ruby__MultiAttributes.recordType-meta.xml
<RecordType>
    <fullName>Ruby__MultiAttributes</fullName>
    <active>true</active>
    <description>A cloned product for creating multiple price book entries with same product</description>
    <label>Multi Attributes</label>
</RecordType>