objects/Product2/recordTypes/Ruby__Product.recordType-meta.xml
<RecordType>
    <fullName>Ruby__Product</fullName>
    <active>true</active>
    <label>Product</label>
</RecordType>