objects/Product2/recordTypes/Ruby__Service.recordType-meta.xml
<RecordType>
    <fullName>Ruby__Service</fullName>
    <active>false</active>
    <label>Service</label>
</RecordType>