objects/Product2/validationRules/Ruby__Carves_Eligible_Needs_Accounting_Segment.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruby__Carves_Eligible_Needs_Accounting_Segment</fullName>
    <active>true</active>
    <description>When “Eligible to include in Carves Allocation” is enabled, values are required in the following fields: Contract Liability Segment, Contract Revenue Segment, Carves Liability Segment and Carves Revenue Segment.</description>
    <errorConditionFormula>Ruby__CarvesEligible__c = true  &amp;&amp;  ( Ruby__CarvesLiabilitySegment__c  = null || Ruby__CarvesRevenueSegment__c = null ||
Ruby__ContractLiabilitySegment__c = null || Ruby__ContractRevenueSegment__c = null )</errorConditionFormula>
    <errorMessage>When Eligible to include in Carves Allocation is selected, values are required in the following fields: Contract Liability Segment, Contract Revenue Segment, Carves Liability Segment and Carves Revenue Segment.</errorMessage>
</ValidationRule>