objects/Product2/validationRules/Ruby__Credit_Product_Needs_Credit_Pool.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruby__Credit_Product_Needs_Credit_Pool</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Ruby__PriceModel__c , &apos;Credit&apos;)  &amp;&amp; 
(
( (ISNULL(Ruby__OriginalProduct__c) || ISBLANK( Ruby__OriginalProduct__c )) &amp;&amp; (ISNULL( Ruby__CreditPoolId__c ) || ISBLANK(Ruby__CreditPoolId__c) ) )
||
( NOT(ISNULL( Ruby__OriginalProduct__c )) &amp;&amp; NOT( ISBLANK( Ruby__OriginalProduct__c ) ) &amp;&amp; ( ISNULL( Ruby__OriginalProduct__r.Ruby__CreditPoolId__c ) || ISBLANK( Ruby__OriginalProduct__r.Ruby__CreditPoolId__c ) ) )
)</errorConditionFormula>
    <errorMessage>The Credit product must have a credit pool.</errorMessage>
</ValidationRule>