objects/Product2/validationRules/Ruby__Term_Type_Products_Need_Term_Dimension.validationRule-meta.xml
<ValidationRule>
    <fullName>Ruby__Term_Type_Products_Need_Term_Dimension</fullName>
    <active>true</active>
    <description>UOM of term type product must have a term dimension.</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Ruby__PriceModel__c, &apos;Recurring&apos;),
    ISPICKVAL(Ruby__PriceModel__c, &apos;Usage&apos;),
    ISPICKVAL(Ruby__PriceModel__c, &apos;CRBD&apos;)
  ),
  OR(
    ISNULL(Ruby__DefaultUom__c),
    ISNULL(Ruby__DefaultUom__r.Ruby__TermDimension__c),
    ISBLANK(TRIM(Ruby__DefaultUom__r.Ruby__TermDimension__c))
  )
)</errorConditionFormula>
    <errorDisplayField>Ruby__DefaultUom__c</errorDisplayField>
    <errorMessage>The UOM must have a term dimension.</errorMessage>
</ValidationRule>