objects/Product2/validationRules/SBQQ__Cannot_Allocate_POT_With_Constraint.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Cannot_Allocate_POT_With_Constraint</fullName>
    <active>true</active>
    <errorConditionFormula>SBQQ__AllocatePotOnOrders__c &amp;&amp; NOT(ISPICKVAL(SBQQ__DynamicPricingConstraint__c,&apos;&apos;))</errorConditionFormula>
    <errorMessage>You cannot have Allocate POT on Orders enabled if Percent of Total Constraint is specified.</errorMessage>
</ValidationRule>