objects/Product2/validationRules/SBQQ__Subscription_Pricing_Must_Be_POT.validationRule-meta.xml
<ValidationRule>
    <fullName>SBQQ__Subscription_Pricing_Must_Be_POT</fullName>
    <active>true</active>
    <description>Subscription Pricing must be &apos;Percent of Total&apos; to set this field to true.</description>
    <errorConditionFormula>IF(
            SBQQ__AllocatePotOnOrders__c=TRUE,
            NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &quot;Percent Of Total&quot;)),
            FALSE
            )</errorConditionFormula>
    <errorDisplayField>SBQQ__AllocatePotOnOrders__c</errorDisplayField>
    <errorMessage>Subscription Pricing must be &apos;Percent of Total&apos; to set this field to true.</errorMessage>
</ValidationRule>